--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,6 +126,68 @@ services:
     networks:
       - default
       - common_default
+  ires-s3-1:
+    build:
+      context: ires-s3-1/
+      args:
+        - ENV_IRODS_VERSION
+        - ENV_IRODS_EXT_CLANG_VERSION
+        - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
+        - ENV_DOCKERIZE_VERSION
+        - ENV_FILEBEAT_VERSION
+    hostname: ires-s3-1
+    environment:
+      RODS_PASSWORD: irods
+      PGPASSWORD: foobar
+      VIRTUAL_HOST: ires-s3-1.${RIT_ENV}.rit.unimaas.nl
+      IRODS_INGEST_REMOVE_DELAY: 300s                         # Only unit 's' supported in 4.2.3 See post on iRODS-chat
+      MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
+      MIRTH_METADATA_CHANNEL: mirthconnect:6670
+      LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
+    networks:
+      - default
+      - common_default
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./irods.secrets.cfg:/etc/secrets:ro
+      - ./externals/irods-ruleset:/rules
+      - ./externals/irods-microservices:/microservices
+      - ./externals/irods-helper-cmd:/helpers
+      - ./externals/irods_resource_plugin_s3:/irods_resource_plugin_s3
+    networks:
+      - default
+      - common_default
+  ires-s3-2:
+    build:
+      context: ires-s3-2/
+      args:
+        - ENV_IRODS_VERSION
+        - ENV_IRODS_EXT_CLANG_VERSION
+        - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
+        - ENV_DOCKERIZE_VERSION
+        - ENV_FILEBEAT_VERSION
+    hostname: ires-s3-2
+    environment:
+      RODS_PASSWORD: irods
+      PGPASSWORD: foobar
+      VIRTUAL_HOST: ires-s3-2.${RIT_ENV}.rit.unimaas.nl
+      IRODS_INGEST_REMOVE_DELAY: 300s                         # Only unit 's' supported in 4.2.3 See post on iRODS-chat
+      MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
+      MIRTH_METADATA_CHANNEL: mirthconnect:6670
+      LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
+    networks:
+      - default
+      - common_default
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./irods.secrets.cfg:/etc/secrets:ro
+      - ./externals/irods-ruleset:/rules
+      - ./externals/irods-microservices:/microservices
+      - ./externals/irods-helper-cmd:/helpers
+      - ./externals/irods_resource_plugin_s3:/irods_resource_plugin_s3
+    networks:
+      - default
+      - common_default
   db:
     image: mysql:${ENV_MYSQL_VERSION}
     hostname: db
@@ -245,6 +307,22 @@ services:
     networks:
       - default
       - common_default
+  minio1:
+    image: minio/minio:RELEASE.2019-05-23T00-29-34Z
+    environment:
+      VIRTUAL_HOST: minio1.${RIT_ENV}.rit.unimaas.nl
+      MINIO_ACCESS_KEY: ABCDEFGHIJKLMNOPQRST
+      MINIO_SECRET_KEY: ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNO
+    entrypoint: sh
+    command: -c 'mkdir -p /data/dh-irods-bucket-dev && /usr/bin/minio server /data'
+  minio2:
+    image: minio/minio:RELEASE.2019-05-23T00-29-34Z
+    environment:
+      VIRTUAL_HOST: minio2.${RIT_ENV}.rit.unimaas.nl
+      MINIO_ACCESS_KEY: BCDEFGHIJKLMNOPQRSTU
+      MINIO_SECRET_KEY: BCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOP
+    entrypoint: sh
+    command: -c 'mkdir -p /data/dh-irods-bucket-dev && /usr/bin/minio server /data'
 networks:
   oculus_default:
     external: true
